refactor(app info): remove STR template